# Multimodal-Complaint-Escalation-Prediction-System

./: .pre-commit-config.yaml  README.md  debug_csv.py  main.py  pyproject.toml  requirements.txt
config/: config.yaml  params.yaml
docs/: feature_01.md  feature_02.md
examples/: basic_inference_example.py
models/artifacts/: onehot_encoder.joblib  target_encoder.joblib
project_cli/: download_data.py  ingest_data.py
src/complaint_priority/data/: data_ingestion.py  download_dataset.py
src/complaint_priority/entity/: data_entities.py
src/complaint_priority/features/: analyze_cardinality.py  build_features.py  feature_selector.py
src/complaint_priority/utils/: common.py
tasks/: download_data.sh  run_ingestion.sh
